Fix some layout problems

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -11,3 +11,7 @@ ol li {
     list-style-position: inside; /* or 'inside' */
     //margin-left: 1em; /* gives 'room' for the numbers to appear in */
 }
+
+img {
+	max-width: 100%;
+}
