--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -104,6 +104,7 @@ body {
 
         &:last-child > a {
             padding-right: 0;
+            margin-right: 0;
         }
     }
 
